sd/qa/unit/import-tests2.cxx
@@ -142,6 +142,7 @@ public:
     void testCropToZero();
     void testTdf144092TableHeight();
     void testTdf89928BlackWhiteThreshold();
+    void testTdf151547TransparentWhiteText();
 
     CPPUNIT_TEST_SUITE(SdImportTest2);
 
@@ -217,6 +218,7 @@ public:
     CPPUNIT_TEST(testCropToZero);
     CPPUNIT_TEST(testTdf144092TableHeight);
     CPPUNIT_TEST(testTdf89928BlackWhiteThreshold);
+    CPPUNIT_TEST(testTdf151547TransparentWhiteText);
 
     CPPUNIT_TEST_SUITE_END();
 };
@@ -2163,6 +2165,27 @@ void SdImportTest2::testTdf89928BlackWhiteThreshold()
         CPPUNIT_ASSERT_EQUAL(Color(ColorTransparency, 0xFFFFFF), aBitmap.GetPixelColor(0, 0));
     }
 
+    xDocShRef->DoClose();
+}
+
+void SdImportTest2::testTdf151547TransparentWhiteText()
+{
+    sd::DrawDocShellRef xDocShRef = loadURL(
+        m_directories.getURLFromSrc(u"sd/qa/unit/data/pptx/tdf151547-transparent-white-text.pptx"),
+        PPTX);
+
+    uno::Reference<beans::XPropertySet> xShape(getShapeFromPage(0, 0, xDocShRef));
+    uno::Reference<text::XTextRange> xParagraph(getParagraphFromShape(0, xShape));
+    uno::Reference<text::XTextRange> xRun(getRunFromParagraph(0, xParagraph));
+    uno::Reference<beans::XPropertySet> xPropSet(xRun, uno::UNO_QUERY_THROW);
+
+    Color nCharColor;
+    xPropSet->getPropertyValue("CharColor") >>= nCharColor;
+    // Without the accompanying fix in place, this test would have failed with:
+    // - Expected: Color: R:255 G:255 B:254 A:255
+    // - Actual  : Color: R:255 G:255 B:255 A:255
+    // i.e. fully transparent white text color was interpreted as COL_AUTO
+    CPPUNIT_ASSERT_EQUAL(Color(ColorTransparency, 0xFFFFFFFE), nCharColor);
     xDocShRef->DoClose();
 }
 
